fixed side whitespace

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ body {
 }
 .line-1{
     position: relative;
-    top: 50%;  
+    top: 50%;
     width: 24em;
     margin: 0 auto;
     border-right: 2px solid rgba(255,255,255,.75);
@@ -26,7 +26,7 @@ body {
     text-align: center;
     white-space: nowrap;
     overflow: hidden;
-    transform: translateY(-50%);    
+    transform: translateY(-50%);
 }
 
 /* Animation */
@@ -281,12 +281,10 @@ footer .glyphicon {
   -webkit-animation: Gradient 15s ease infinite;
   -moz-animation: Gradient 15s ease infinite;
   animation: Gradient 15s ease infinite;
-  min-height: 100vh;
   position: absolute;
-  width: 99vw;
+  width: 100%;
   background-position: 50% 50%;
-  min-height: 100%;
-  height: 100vh!important;
+  height: 100%!important;
 }
 @-webkit-keyframes Gradient {
   0% {
